# CPP-Generator

./: CMakeLists.txt  CPP-Generator.cpp  CPP-Generator.h  README.md
ExposedFunctions/: cppGenerator.h
Testing/: GeneratorTesting.cpp
